<resources>
    <string name="app_name">Udacity-Project0</string>
    <string name="action_settings">Settings</string>
    <string name="content_title">My NanoDegree Apps!</string>
    <string name="spotify_button_string">SPOTIFY STREAMER</string>
    <string name="scores_button_string">SCORES APP</string>
    <string name="library_button_string">LIBRARY APP</string>
    <string name="build_bigger_button_string">BUILD IT BIGGER</string>
    <string name="xyz_button_string">XYZ READER</string>
    <string name="capstone_button_string">CAPSTONE: MY OWN APP</string>
</resources>
