<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:layout_width="fill_parent"
    android:id="@+id/scrollView"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView android:text="@string/content_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_size"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:id="@+id/heading_text" />

        <Button
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/button_top_margin"
            android:text="@string/spotify_button_string"
            android:id="@+id/spotify_button"
            android:layout_below="@+id/heading_text"
            android:onClick="buttonOnClick"/>

        <Button
            style="@style/ButtonStyle"
            android:text="@string/scores_button_string"
            android:id="@+id/scores_button"
            android:layout_below="@+id/spotify_button"
            android:onClick="buttonOnClick"/>

        <Button
            style="@style/ButtonStyle"
            android:text="@string/library_button_string"
            android:id="@+id/library_button"
            android:layout_below="@+id/scores_button"
            android:onClick="buttonOnClick"/>

        <Button
            style="@style/ButtonStyle"
            android:text="@string/build_bigger_button_string"
            android:id="@+id/build_bigger_button"
            android:layout_below="@+id/library_button"
            android:onClick="buttonOnClick"/>

        <Button
            style="@style/ButtonStyle"
            android:text="@string/xyz_button_string"
            android:id="@+id/xyz_reader_button"
            android:layout_below="@+id/build_bigger_button"
            android:onClick="buttonOnClick"/>

        <Button
            style="@style/ButtonStyle"
            android:text="@string/capstone_button_string"
            android:id="@+id/capstone_button"
            android:layout_below="@+id/xyz_reader_button"
            android:onClick="buttonOnClick"/>
    </RelativeLayout>
</ScrollView>
